16 Nov 2002 Add TROO, TROT, TRTO and TRTT instructions - Jan Jaeger
15 Nov 2002 Add extended translation facility 2 to ESA/390 mode - Jan Jaeger
14 Nov 2002 Corrections to opcode table and disassembler - Jan Jaeger
14 Nov 2002 New CTC and LCS emulation - Jim Pierson
14 Nov 2002 Add SVCA to z/Architecture mode - Jan Jaeger
07 Nov 2002 Correct execution controls - Jan Jaeger
29 Oct 2002 Make card reader eof/intrq parameter persistent - Jay Maynard
29 Oct 2002 Correct devinit command to work when only one argument is given -
            Jay Maynard
29 Oct 2002 Ignore 7-track mode set commands for tape drives - Andy Norrie
27 Oct 2002 Fix dasdisup to accept one argument - Jay Maynard
13 Oct 2002 64bit cmpsc fixes - Bernard van der Helm
12 Oct 2002 CKD fix when offset >= 2G - Greg Smith
03 Okt 2002 PER fixes - Jan Jaeger
01 Okt 2002 Fix for SSK/ISK/RRB - Juergen Dobrinski
19 Sep 2002 Fix cckd thrash for large fragmentations - Greg Smith
19 Sep 2002 Fix console.c to wait for initdone to listen - Greg Smith
30 Aug 2002 Fix MVCL to update regs prior to possible program check - Greg
            Smith
26 Aug 2002 Added "noprompt" option to turn off input prompting for 1052/3215
            consoles - Jay Maynard
25 Aug 2002 Fix cckd free space chain corruption when freeing space
            for a `type 1' null track - Greg Smith & Volker Bandke
08 Aug 2002 Increased cckd shutdown serialization - Greg Smith
08 Aug 2002 Add 'Send" button in syslog cgi - Adam Thornton by Jan Jaeger
08 Aug 2002 AEA invalidation performance enhancement - Gabor Hofi by Greg Smith
03 Aug 2002 Fix dasdload to ignore comments in CBT XMIT files - Roger Bowler
03 Aug 2002 Change automagic to make NLS support work - Volker Bandke
30 Jul 2002 Compressed dasd tweaks - Greg Smith
26 Jul 2002 Compressed dasd enhanced free pending processing - Greg Smith
22 Jul 2002 Performance tweaks - Gabor Hofi & Greg Smith
22 Jul 2002 cckd options `nofsync' and `fsyncwa' - Greg Smith