@@ -3313,8 +3313,8 @@ zz_func opcode_ebxx[256][GEN_MAXARCH] = {
  /*EB8B*/ GENx___x___x___ ,
  /*EB8C*/ GENx___x___x___ ,
  /*EB8D*/ GENx___x___x___ ,
- /*EB8E*/ GENx___x390x900 (dummy_instruction,RSE,"MVCLU"),
- /*EB8F*/ GENx___x390x900 (dummy_instruction,RSE,"CLCLU"),
+ /*EB8E*/ GENx___x390x900 (move_long_unicode,RSE,"MVCLU"),
+ /*EB8F*/ GENx___x390x900 (compare_logical_long_unicode,RSE,"CLCLU"),
  /*EB90*/ GENx___x___x___ ,
  /*EB91*/ GENx___x___x___ ,
  /*EB92*/ GENx___x___x___ ,
