@@ -1,3 +1,4 @@
+16 Nov 2002 Add MVCLU and CLCLU instructions - Jan Jaeger
 16 Nov 2002 Add TROO, TROT, TRTO and TRTT instructions - Jan Jaeger
 15 Nov 2002 Add extended translation facility 2 to ESA/390 mode - Jan Jaeger
 14 Nov 2002 Corrections to opcode table and disassembler - Jan Jaeger
